log: run 002 -- added scope self-report, 2m41s, \$0.37